[package]
name = "geotrans"
version = "0.2.2"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2018"
license = "MIT"
description = "Giant Magellan Telescope Geometric Transformations"
repository = "https://github.com/rconan/geotrans"
documentation = "https://docs.rs/geotrans"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]

[dependencies]
thiserror = "1.0.30"
